# narrate

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  cicheck
.github/workflows/: release.yml  tests.yml
examples/: anyhow_add_help.rs  anyhow_report.rs  invalid_config.rs  lazy_wrap.rs  main_result_error.rs  multi_help_msg.rs  status.rs  wrap_report_exit.rs
src/: cli_error.rs  exit_code.rs  lib.rs  macros.rs  report.rs
src/error/: chain.rs  cli.rs  macros.rs  mod.rs  wrap.rs
tests/: wrap.rs
tests/integration/: chain.rs  cli_error.rs  error.rs  exit_code.rs  main.rs  report.rs  util.rs  wrap.rs
