[package]
name = "narrate"
version = "0.4.1"
authors = ["Christopher Morton <sonro@gmx.com>"]
edition = "2021"
description = "narrate is a set of CLI app utilities for error handling and status reporting"
repository = "https://github.com/sonro/narrate"
license = "MIT/Apache-2.0"
readme = "README.md"
rust-version = "1.70.0"

[features]
default = ["cli-error", "error", "report"]
cli-error = ["dep:exitcode"]
error = ["anyhow"]
report = ["anyhow", "dep:atty", "dep:colored"]
anyhow = ["dep:anyhow"]

[dependencies]
anyhow = { version = "1.0.86", optional = true }
atty = { version = "0.2.14", optional = true }
colored = { version = "2.1.0", optional = true }
exitcode = { version = "1.1.2", optional = true }

[[bin]]
name = "report_err_full_test"
doc = false
test = false
required-features = ["error", "report"]

[[bin]]
name = "report_err_test"
doc = false
test = false
required-features = ["error", "report"]

[[bin]]
name = "report_anyhow_err_full_test"
doc = false
test = false
required-features = ["report"]

[[bin]]
name = "report_anyhow_err_test"
doc = false
test = false
required-features = ["report"]

[[bin]]
name = "status_test"
doc = false
test = false
required-features = ["report"]
